--- a/album/views/404.ejs
+++ b/album/views/404.ejs
@@ -4,11 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>小小相册</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .row h4{text-align: center}
-    </style>
+    <title>404</title>
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -33,19 +30,9 @@
     </div>
 </nav>
 <div class="container">
-    <div class="row">
-        <% for(var i=0;i<albums.length;i++){ %>
-        <div class="col-xs-6 col-md-3">
-            <a href="<%=albums[i] %>" class="thumbnail">
-                <img src="images/wjj.jpg" alt="...">
-            </a>
-            <h4><%=albums[i] %></h4>
-        </div>
-        <%} %>
-    </div>
+    <img src="/images/404.jpg" alt="">
 </div>
-
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
