--- a/album/views/album.ejs
+++ b/album/views/album.ejs
@@ -26,20 +26,24 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">全部相册 <span class="sr-only">(current)</span></a></li>
+                <li><a href="#">全部相册 <span class="sr-only">(current)</span></a></li>
                 <li><a href="#">上传</a></li>
             </ul>
         </div>
     </div>
 </nav>
 <div class="container">
+    <ol class="breadcrumb">
+        <li><a href="/">全部相册</a></li>
+        <li class="active"><%=albumname%></li>
+    </ol>
     <div class="row">
-        <% for(var i=0;i<albums.length;i++){ %>
+        <% for(var i=0;i<images.length;i++){ %>
         <div class="col-xs-6 col-md-3">
-            <a href="<%=albums[i] %>" class="thumbnail">
-                <img src="images/wjj.jpg" alt="...">
+            <a href="<%=images[i] %>" class="thumbnail">
+                <img src="<%=images[i] %>" alt="...">
             </a>
-            <h4><%=albums[i] %></h4>
+            <h4><%=images[i]%></h4>
         </div>
         <%} %>
     </div>
