--- a/album/views/up.ejs
+++ b/album/views/up.ejs
@@ -26,30 +26,34 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="/">全部相册 <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/">全部相册 <span class="sr-only">(current)</span></a></li>
                 <li><a href="/up">上传</a></li>
             </ul>
         </div>
     </div>
 </nav>
 <div class="container">
-    <ol class="breadcrumb">
-        <li><a href="/">全部相册</a></li>
-        <li class="active"><%=albumname%></li>
-    </ol>
     <div class="row">
-        <% for(var i=0;i<images.length;i++){ %>
-        <div class="col-xs-6 col-md-3">
-            <a href="<%=images[i] %>" class="thumbnail">
-                <img src="<%=images[i] %>" alt="...">
-            </a>
-            <h4><%=images[i]%></h4>
-        </div>
-        <%} %>
+        <form style="width: 40%" method="post" action="#" enctype="multipart/form-data">
+            <div class="form-group">
+                <label for="exampleInputEmail1">选择文件夹</label>
+                <select class="form-control" name="folder">
+                    <% for(var i=0;i<album.length;i++){ %>
+                    <option><%=album[i]%></option>
+                    <%}%>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputFile">选择图片</label>
+                <input type="file" id="exampleInputFile" name="image">
+            </div>
+            <button type="submit" class="btn btn-default">上传</button>
+        </form>
     </div>
+
 </div>
 
-<script src="/https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
